--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CarNavRelay"
-        android:icon="@mipmap/ic_launcher">
+        android:theme="@style/Theme.CarNavRelay">
 
         <activity
             android:name=".MainActivity"
