--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:exported="true" />
 
         <activity
+            android:name=".MainPairActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".RelayActivity"
             android:exported="true"
             android:launchMode="singleTask">
