--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Foreground service base -->
+    <!-- Network permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <!-- Camera for QR scanning -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+
+    <!-- Foreground service for HTTP server -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <!-- Android 14+ requirement for foregroundServiceType="connectedDevice" -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
-    <!-- Pre-Android 12 (<=30) legacy Bluetooth permissions -->
-    <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" android:maxSdkVersion="30" />
-
-    <!-- Android 12+ Bluetooth runtime permissions -->
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-
-    <!-- Optional (Android 13+) -->
+    <!-- Notifications (Android 13+) -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <!-- Keep screen on for Display mode -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".PhantomGoApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CarNavRelay">
+        android:theme="@style/Theme.CarNavRelay"
+        android:usesCleartextTraffic="true">
 
         <activity
             android:name=".MainActivity"
@@ -35,10 +39,11 @@
 
         <activity
             android:name=".DisplayActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:keepScreenOn="true" />
 
         <activity
-            android:name=".MainPairActivity"
+            android:name=".PairScanActivity"
             android:exported="false" />
 
         <activity
@@ -49,7 +54,8 @@
         <activity
             android:name=".RelayActivity"
             android:exported="true"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.CarNavRelay.Translucent">
 
             <!-- geo:lat,lng หรือ geo:0,0?q= -->
             <intent-filter>
@@ -85,15 +91,11 @@
 
         </activity>
 
+        <!-- HTTP Server Service for Display mode -->
         <service
-            android:name=".bt.DisplayServerService"
+            android:name=".DisplayServerService"
             android:exported="false"
-            android:foregroundServiceType="connectedDevice" />
-
-        <service
-            android:name=".bt.MainClientService"
-            android:exported="false"
-            android:foregroundServiceType="connectedDevice" />
+            android:foregroundServiceType="dataSync" />
 
     </application>
 </manifest>
