Fix notification button: Open Navigation works without DisplayActivity
Problem:
- Navigation notification button didn't work when DisplayActivity not in foreground
- DisplayServerService used broadcast receiver that required DisplayActivity running

Solution:
- Create OpenNavigationActivity as standalone activity
- Update notification to use PendingIntent.getActivity() instead of broadcast
- OpenNavigationActivity handles URL parsing and Maps launching
- Supports Google Maps fallback to browser
- Works regardless of DisplayActivity state

Features:
- OpenNavigationActivity with transparent theme
- Proper URL validation and error handling
- FLAG_ACTIVITY_NEW_TASK for clean launch
- Full-screen intent for high priority
- Logging for diagnostics

Files changed:
- OpenNavigationActivity.kt (NEW)
- AndroidManifest.xml (add activity declaration)
- DisplayServerService.kt (update notification action)
- Build passes ./gradlew clean assembleDebug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,5 +148,11 @@
             android:name=".receiver.OpenMapsReceiver"
             android:exported="false" />
 
+        <!-- Open Navigation Activity (for notification action) -->
+        <activity
+            android:name=".OpenNavigationActivity"
+            android:exported="false"
+            android:theme="@style/Theme.CarNavRelay.Translucent" />
+
     </application>
 </manifest>
